Added a line to portfolio so you can practice rejecting on github

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,7 @@
 		</table>
 	</div>
 	<br>
+	<h1>Adding this so you can reject the changes I make on github. github practice!</h1>
 	<h2>Career Objectives</h2>
 	<br>
 	<h2>My Info</h2>
