--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,10 @@
 	<br>
 	<h2>My Info</h2>
 	<br>
-	<h2>List of Accomplishments</h2>
+	<h2>List of Destiny Accomplishments</h2>
+		<ul>
+			<li>Killt Mad Dudes</li>
+		</ul>
 	<br>
 	<h2>Known Skills/Technologies</h2>
 		<ul>
