added an extra line for you to fix for your homework

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,6 +38,7 @@
 	<h2>List of Destiny Accomplishments</h2>
 		<ul>
 			<li>Killt Mad Dudes</li>
+			<li>By "Destiny" do you mean the video game? If so, I play also on XB1, oh and I added this line so you can correct it for homework</li>
 		</ul>
 	<br>
 	<h2>Known Skills/Technologies</h2>
