added line to career objective

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,12 +32,16 @@
 	</div>
 	<br>
 	<h2>Career Objectives</h2>
+		<ul>
+			<li>Hack time like <a href="https://www.youtube.com/watch?v=KEkrWRHCDQU"> hackerman</a></li>
+		</ul>
 	<br>
 	<h2>My Info</h2>
 	<br>
 	<h2>List of Destiny Accomplishments</h2>
 		<ul>
 			<li>Killt Mad Dudes</li>
+			<li>Got the gajalahorn</li>
 		</ul>
 	<br>
 	<h2>Known Skills/Technologies</h2>
@@ -48,6 +52,12 @@
 	<h2>Places I've Worked</h2>
 	<br>
 	<h2>My Hobbies</h2>
+		<ul>
+			<li>Playing Golf</li>
+			<li>Playing Videogames (Destiny)</li>
+			<li>Drinking</li>
+			<li>Eating</li>
+		</ul>
 	<br>
 	<h2>Projects I've Worked On/Wish to Work on</h2>
 	<br>
