--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 				<td><font size="5"; color="1F1F14">Rutgers State University of NJ</font></td>
 			</tr>
 			<tr>
-				<td bgcolor="White">		
+				<td bgcolor=#6E6EFF>		
 					<a href="https://www.linkedin.com/pub/shreyans-patel/36/a25/298" target="blank"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png" style="width:"50px"; height="50px"></a>
 					<a href="https://github.com/Shreyp" target="blank"><img src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png" style="width:"50px"; height="50px "></a>
 					<a href="https://www.facebook.com/shreyans.patel.7" target="blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/F_icon.svg/2000px-F_icon.svg.png" style="width:"50px"; height="50px"></a>
@@ -32,15 +32,16 @@
 	</div>
 	<br>
 	<h2>Career Objectives</h2>
-		<ul>
-			<li>Hack time like <a href="https://www.youtube.com/watch?v=KEkrWRHCDQU"> hackerman</a></li>
-		</ul>
+		<article>My life long career goal has been to become a world class hacker like hackerman.</article>
+		<hr>
 	<br>
-	<h2>My Info</h2>
+	<h2>About Me</h2>
+		<article>My name is Shreyans Patel, and I graduated from Rutgers University in 2011 with a bachelor of science in Economics and Psychology.  I started out in college wanting to be a doctor, but realized I was going into that field for the wrong reason.  I switched over to Economics in my Junior year, and have held various business end roles for the past 4 years.</article>
+		<hr>
 	<br>
 	<h2>List of Destiny Accomplishments</h2>
 		<ul>
-			<li>Killt Mad Dudes</li>
+			<li>Killed mad dudes</li>
 			<li>Got the gajalahorn</li>
 		</ul>
 	<br>
