made change to header and title

--- a/home.html
+++ b/home.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Shreyans' Portfolio Page</title>
+	<title>Shreyans' Profile Page</title>
 </head>
 <body bgcolor="F2F2F2">
 	<div style="background-color:#6E6EFF; padding:50px">
 		<table border=0>
 			<tr>
 				<th rowspan="3"><img src="http://i.groupme.com/1372x1576.png.99f05898662744bfbb59a16f871d2e84.large" style="width:200px"; width="200px"></th>
-				<th colspan="2" align="left"><font size="8"; color="black">Shreyans' Portfolio Page</font></th>
+				<th colspan="2" align="left"><font size="8"; color="black">Shreyans' Profile Page</font></th>
 			</tr>
 			<tr>
 				<td><font size="5"; color=#F2F2F2>Current Employer</font></td>
