--- a/home.html
+++ b/home.html
@@ -2,31 +2,32 @@
 <html>
 <head>
 	<title>Shreyans' Profile Page</title>
+	<link rel="stylesheet" type="text/css" href="Styles\styles.css">
 </head>
-<body bgcolor="F2F2F2">
-	<div style="background-color:#6E6EFF; padding:50px">
+<body>
+	<div id="heading _div">
 		<table border=0>
 			<tr>
-				<th rowspan="3"><img src="http://i.groupme.com/1372x1576.png.99f05898662744bfbb59a16f871d2e84.large" style="width:200px"; width="200px"></th>
-				<th colspan="2" align="left"><font size="8"; color="black">Shreyans' Profile Page</font></th>
+				<th rowspan="3"><img src="http://i.groupme.com/1372x1576.png.99f05898662744bfbb59a16f871d2e84.large" style="width:"200px"; height="200px"></th>
+				<th colspan="2" align="left" id="profile_name">Shreyans' Profile Page</th>
 			</tr>
 			<tr>
-				<td><font size="5"; color=#F2F2F2>Current Employer</font></td>
-				<td><font size="5"; color="1F1F14">First Soft Solutions</font></td>
+				<td>Current Employer</td>
+				<td>First Soft Solutions</td>
 			</tr>
 			<tr>
-				<td><font size="5"; color=#F2F2F2>Education</font></td>
-				<td><font size="5"; color="1F1F14">Rutgers State University of NJ</font></td>
+				<td>Education</td>
+				<td>Rutgers State University of NJ</td>
 			</tr>
 			<tr>
-				<td bgcolor=#6E6EFF>		
+				<td>		
 					<a href="https://www.linkedin.com/pub/shreyans-patel/36/a25/298" target="blank"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png" style="width:"50px"; height="50px"></a>
 					<a href="https://github.com/Shreyp" target="blank"><img src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png" style="width:"50px"; height="50px "></a>
 					<a href="https://www.facebook.com/shreyans.patel.7" target="blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/F_icon.svg/2000px-F_icon.svg.png" style="width:"50px"; height="50px"></a>
 					<a href="https://plus.google.com/108924129270029866296/posts" target="blank"><img src="http://icons.iconarchive.com/icons/marcus-roberto/google-play/256/Google-plus-icon.png" style="width:"50px"; height="50px "></a>
 				</td>
-				<td><font size="5" color="#F2F2F2">Contact Info</font></td>
-				<td align="left"><font size="5"; color="1F1F14">Email Address:<span><a href="mailto:shreyans89@gmail.com" target="top">shreyans89@gmail.com</a></span></font></td>
+				<td>Contact Info</td>
+				<td align="left">Email Address:<a href="mailto:shreyans89@gmail.com" target="top">shreyans89@gmail.com</a></td>
 			</tr>
 		</table>
 	</div>
