changed div color

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 	<title>Shreyans' Profile Page</title>
 </head>
 <body bgcolor="F2F2F2">
-	<div style="background-color:#6E6EFF; padding:50px">
+	<div style="background-color: blue; padding:50px">
 		<table border=0>
 			<tr>
 				<th rowspan="3"><img src="http://i.groupme.com/1372x1576.png.99f05898662744bfbb59a16f871d2e84.large" style="width:200px"; width="200px"></th>
