mad changes due to use of css

--- a/Blog_Post.html
+++ b/Blog_Post.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Blog Post</title>
+	<title>My Blog</title>
+	<link rel="stylesheet" type="text/css" href="Styles\styles.css">
 </head>
 <body>
-
+	<div class="navigation">
+		<a href="Blog_Post.html">Blog</a>
+		<a href="home.html">Home</a>
+		<hr>
+	</div>
 </body>
 </html>
