--- a/home.html
+++ b/home.html
@@ -5,31 +5,22 @@
 	<link rel="stylesheet" type="text/css" href="Styles\styles.css">
 </head>
 <body>
-	<div id="heading _div">
-		<table border=0>
-			<tr>
-				<th rowspan="3"><img src="http://i.groupme.com/1372x1576.png.99f05898662744bfbb59a16f871d2e84.large" style="width:"200px"; height="200px"></th>
-				<th colspan="2" align="left" id="profile_name">Shreyans' Profile Page</th>
-			</tr>
-			<tr>
-				<td>Current Employer</td>
-				<td>First Soft Solutions</td>
-			</tr>
-			<tr>
-				<td>Education</td>
-				<td>Rutgers State University of NJ</td>
-			</tr>
-			<tr>
-				<td>		
-					<a href="https://www.linkedin.com/pub/shreyans-patel/36/a25/298" target="blank"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png" style="width:"50px"; height="50px"></a>
-					<a href="https://github.com/Shreyp" target="blank"><img src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png" style="width:"50px"; height="50px "></a>
-					<a href="https://www.facebook.com/shreyans.patel.7" target="blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/F_icon.svg/2000px-F_icon.svg.png" style="width:"50px"; height="50px"></a>
-					<a href="https://plus.google.com/108924129270029866296/posts" target="blank"><img src="http://icons.iconarchive.com/icons/marcus-roberto/google-play/256/Google-plus-icon.png" style="width:"50px"; height="50px "></a>
-				</td>
-				<td>Contact Info</td>
-				<td align="left">Email Address:<a href="mailto:shreyans89@gmail.com" target="top">shreyans89@gmail.com</a></td>
-			</tr>
-		</table>
+	<div class="navigation">
+		<a href="Blog_Post.html">Blog</a>
+		<a href="home.html">Home</a>
+		<hr>
+	</div>
+	<div class="header">
+		<div class="name">Shreyans' Profile Page</div>
+		<div>
+			<img class="profile" src="http://i.groupme.com/1372x1576.png.99f05898662744bfbb59a16f871d2e84.large">
+		</div>
+		<div>
+			<a href="https://www.linkedin.com/pub/shreyans-patel/36/a25/298" target="blank"><img class="social" src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png"></a>
+			<a href="https://github.com/Shreyp" target="blank"><img class="social" src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png"></a>
+			<a href="https://www.facebook.com/shreyans.patel.7" target="blank"><img class="social" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/F_icon.svg/2000px-F_icon.svg.png" "></a>
+			<a href="https://plus.google.com/108924129270029866296/posts" target="blank"><img class="social" src="http://icons.iconarchive.com/icons/marcus-roberto/google-play/256/Google-plus-icon.png"></a>
+		</div>
 	</div>
 	<br>
 	<h2>Career Objectives</h2>
@@ -63,6 +54,8 @@
 	<br>
 	<h2>Projects I've Worked On/Wish to Work on</h2>
 	<br>
+	<h2>Contact Me</h2>
+	<br>
 		<form action="action_page.php" method="post">
 			<fieldset>
 				<legend>Let's Keep in Touch</legend>
@@ -76,6 +69,5 @@
 		</fieldset>
 	</form>
 	<br>
-	<h2><a href="Blog_Post.html" target="blank">My Blog</a></h2>
 </body>
 </html>
