--- a/Blog_Post.html
+++ b/Blog_Post.html
@@ -8,6 +8,7 @@
 	<div class="navigation">
 		<a href="Blog_Post.html">Blog</a>
 		<a href="home.html">Home</a>
+		<a href="#contact">Contact Me</a>
 		<hr>
 	</div>
 </body>
