--- a/home.html
+++ b/home.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 	<div class="navigation">
-		<a href="Blog_Post.html">Blog</a>
 		<a href="home.html">Home</a>
+		<a href="Blog_Post.html">Blog</a>
+		<a href="#contact">Contact Me</a>
 		<hr>
 	</div>
 	<div class="header">
@@ -20,7 +21,7 @@
 			<a href="https://github.com/Shreyp" target="blank"><img class="social" src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png"></a>
 			<a href="https://www.facebook.com/shreyans.patel.7" target="blank"><img class="social" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/F_icon.svg/2000px-F_icon.svg.png" "></a>
 			<a href="https://plus.google.com/108924129270029866296/posts" target="blank"><img class="social" src="http://icons.iconarchive.com/icons/marcus-roberto/google-play/256/Google-plus-icon.png"></a>
-		</div>
+		</div>	
 	</div>
 	<br>
 	<h2>Career Objectives</h2>
@@ -31,15 +32,12 @@
 		<article>My name is Shreyans Patel, and I graduated from Rutgers University in 2011 with a bachelor of science in Economics and Psychology.  I started out in college wanting to be a doctor, but realized I was going into that field for the wrong reason.  I switched over to Economics in my Junior year, and have held various business end roles for the past 4 years.</article>
 		<hr>
 	<br>
-	<h2>List of Destiny Accomplishments</h2>
-		<ul>
-			<li>Killed mad dudes</li>
-			<li>Got the gajalahorn</li>
-		</ul>
+	<h2>List of Accomplishments</h2>
 	<br>
 	<h2>Known Skills/Technologies</h2>
 		<ul>
 			<li>html</li>
+			<li>CSS</li>
 		</ul>
 	<br>
 	<h2>Places I've Worked</h2>
@@ -53,8 +51,13 @@
 		</ul>
 	<br>
 	<h2>Projects I've Worked On/Wish to Work on</h2>
+		<ul>
+			<li>My Profile Page</li>
+		</ul>
 	<br>
+<div id="contact">
 	<h2>Contact Me</h2>
+	<p>Email: <a href="shreyans89@gmail.com">shreyans89@gmail.com</a></p>
 	<br>
 		<form action="action_page.php" method="post">
 			<fieldset>
@@ -68,6 +71,7 @@
 			<input type="submit" value="submit">
 		</fieldset>
 	</form>
-	<br>
+</div>
+<br>
 </body>
 </html>
