--- a/home.html
+++ b/home.html
@@ -2,33 +2,26 @@
 <html>
 <head>
 	<title>Shreyans' Profile Page</title>
+	<link rel="stylesheet" type="text/css" href="Styles\styles.css">
 </head>
-<body bgcolor="F2F2F2">
-	<div style="background-color:#6E6EFF; padding:50px">
-		<table border=0>
-			<tr>
-				<th rowspan="3"><img src="http://i.groupme.com/1372x1576.png.99f05898662744bfbb59a16f871d2e84.large" style="width:200px"; width="200px"></th>
-				<th colspan="2" align="left"><font size="8"; color="black">Shreyans' Profile Page</font></th>
-			</tr>
-			<tr>
-				<td><font size="5"; color=#F2F2F2>Current Employer</font></td>
-				<td><font size="5"; color="1F1F14">First Soft Solutions</font></td>
-			</tr>
-			<tr>
-				<td><font size="5"; color=#F2F2F2>Education</font></td>
-				<td><font size="5"; color="1F1F14">Rutgers State University of NJ</font></td>
-			</tr>
-			<tr>
-				<td bgcolor=#6E6EFF>		
-					<a href="https://www.linkedin.com/pub/shreyans-patel/36/a25/298" target="blank"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png" style="width:"50px"; height="50px"></a>
-					<a href="https://github.com/Shreyp" target="blank"><img src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png" style="width:"50px"; height="50px "></a>
-					<a href="https://www.facebook.com/shreyans.patel.7" target="blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/F_icon.svg/2000px-F_icon.svg.png" style="width:"50px"; height="50px"></a>
-					<a href="https://plus.google.com/108924129270029866296/posts" target="blank"><img src="http://icons.iconarchive.com/icons/marcus-roberto/google-play/256/Google-plus-icon.png" style="width:"50px"; height="50px "></a>
-				</td>
-				<td><font size="5" color="#F2F2F2">Contact Info</font></td>
-				<td align="left"><font size="5"; color="1F1F14">Email Address:<span><a href="mailto:shreyans89@gmail.com" target="top">shreyans89@gmail.com</a></span></font></td>
-			</tr>
-		</table>
+<body>
+	<div class="navigation">
+		<a href="home.html">Home</a>
+		<a href="Blog_Post.html">Blog</a>
+		<a href="#contact">Contact Me</a>
+		<hr>
+	</div>
+	<div class="header">
+		<div class="name">Shreyans' Profile Page</div>
+		<div>
+			<img class="profile" src="http://i.groupme.com/1372x1576.png.99f05898662744bfbb59a16f871d2e84.large">
+		</div>
+		<div>
+			<a href="https://www.linkedin.com/pub/shreyans-patel/36/a25/298" target="blank"><img class="social" src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png"></a>
+			<a href="https://github.com/Shreyp" target="blank"><img class="social" src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png"></a>
+			<a href="https://www.facebook.com/shreyans.patel.7" target="blank"><img class="social" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/F_icon.svg/2000px-F_icon.svg.png" "></a>
+			<a href="https://plus.google.com/108924129270029866296/posts" target="blank"><img class="social" src="http://icons.iconarchive.com/icons/marcus-roberto/google-play/256/Google-plus-icon.png"></a>
+		</div>	
 	</div>
 	<br>
 	<h2>Career Objectives</h2>
@@ -39,15 +32,12 @@
 		<article>My name is Shreyans Patel, and I graduated from Rutgers University in 2011 with a bachelor of science in Economics and Psychology.  I started out in college wanting to be a doctor, but realized I was going into that field for the wrong reason.  I switched over to Economics in my Junior year, and have held various business end roles for the past 4 years.</article>
 		<hr>
 	<br>
-	<h2>List of Destiny Accomplishments</h2>
-		<ul>
-			<li>Killed mad dudes</li>
-			<li>Got the gajalahorn</li>
-		</ul>
+	<h2>List of Accomplishments</h2>
 	<br>
 	<h2>Known Skills/Technologies</h2>
 		<ul>
 			<li>html</li>
+			<li>CSS</li>
 		</ul>
 	<br>
 	<h2>Places I've Worked</h2>
@@ -61,6 +51,13 @@
 		</ul>
 	<br>
 	<h2>Projects I've Worked On/Wish to Work on</h2>
+		<ul>
+			<li>My Profile Page</li>
+		</ul>
+	<br>
+<div id="contact">
+	<h2>Contact Me</h2>
+	<p>Email: <a href="shreyans89@gmail.com">shreyans89@gmail.com</a></p>
 	<br>
 		<form action="action_page.php" method="post">
 			<fieldset>
@@ -74,7 +71,7 @@
 			<input type="submit" value="submit">
 		</fieldset>
 	</form>
-	<br>
-	<h2><a href="Blog_Post.html" target="blank">My Blog</a></h2>
+</div>
+<br>
 </body>
 </html>
