linked blog to contact me

--- a/Blog_Post.html
+++ b/Blog_Post.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 	<div class="navigation">
-		<a href="Blog_Post.html">Blog</a>
 		<a href="home.html">Home</a>
-		<a href="#contact">Contact Me</a>
+		<a href="Blog_Post.html">Blog</a>
+		<a href="home.html #contact">Contact Me</a>
 		<hr>
 	</div>
 </body>
