--- a/home.html
+++ b/home.html
@@ -57,6 +57,7 @@
 	<br>
 <div id="contact">
 	<h2>Contact Me</h2>
+	<p>Phone: 732-710-1562</p>
 	<p>Email: <a href="shreyans89@gmail.com">shreyans89@gmail.com</a></p>
 	<br>
 		<form action="action_page.php" method="post">
