--- a/home.html
+++ b/home.html
@@ -23,25 +23,19 @@
 			<a href="https://plus.google.com/108924129270029866296/posts" target="blank"><img class="social" src="http://icons.iconarchive.com/icons/marcus-roberto/google-play/256/Google-plus-icon.png"></a>
 		</div>	
 	</div>
-	<br>
-	<h2>Career Objectives</h2>
-		<article>My life long career goal has been to become a world class hacker like hackerman.</article>
-		<hr>
-	<br>
+	<hr>
+	<br />
 	<h2>About Me</h2>
-		<article>My name is Shreyans Patel, and I graduated from Rutgers University in 2011 with a bachelor of science in Economics and Psychology.  I started out in college wanting to be a doctor, but realized I was going into that field for the wrong reason.  I switched over to Economics in my Junior year, and have held various business end roles for the past 4 years.</article>
-		<hr>
-	<br>
-	<h2>List of Accomplishments</h2>
-	<br>
+		<article>Hi, my name is Shreyans Patel.  I graduated from Rutgers University in 2011 with a bachelors of science in Economics and Psychology.</article>
+	<br />
+	<h2>Career Objective</h2>
+		<article>Become a kickass web developer.</article>
 	<h2>Known Skills/Technologies</h2>
 		<ul>
 			<li>html</li>
 			<li>CSS</li>
 		</ul>
-	<br>
-	<h2>Places I've Worked</h2>
-	<br>
+	<br />
 	<h2>My Hobbies</h2>
 		<ul>
 			<li>Playing Golf</li>
@@ -49,17 +43,17 @@
 			<li>Drinking</li>
 			<li>Eating</li>
 		</ul>
-	<br>
+	<br />
 	<h2>Projects I've Worked On/Wish to Work on</h2>
 		<ul>
 			<li>My Profile Page</li>
 		</ul>
-	<br>
+	<br />
 <div id="contact">
 	<h2>Contact Me</h2>
 	<p>Phone: 732-710-1562</p>
 	<p>Email: <a href="shreyans89@gmail.com">shreyans89@gmail.com</a></p>
-	<br>
+	<br />
 		<form action="action_page.php" method="post">
 			<fieldset>
 				<legend>Let's Keep in Touch</legend>
@@ -68,11 +62,11 @@
 				Email:<br />
 				<input type="text" id="Email" name="Email"><br />
 				Message:<br />
-				<textarea rows="8"; cols="80" id="Message" name="Message"></textarea><br />
+				<textarea id="Message" name="Message"></textarea><br />
 			<input type="submit" value="submit">
 		</fieldset>
 	</form>
 </div>
-<br>
+<br />
 </body>
 </html>
