--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Shreyans' Profile Page</title>
-	<link rel="stylesheet" type="text/css" href="Styles\styles.css">
+	<link rel="stylesheet" type="text/css" href="styles\styles.css">
 </head>
 <body>
 	<div class="navigation">
