added images folder changed css

--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Shreyans' Profile Page</title>
+	<title>My Profile Page</title>
 	<link rel="stylesheet" type="text/css" href="styles\styles.css">
 </head>
 <body>
@@ -9,7 +9,6 @@
 		<a href="home.html">Home</a>
 		<a href="Blog_Post.html">Blog</a>
 		<a href="#contact">Contact Me</a>
-		<hr>
 	</div>
 	<div class="header">
 		<div class="name">Shreyans' Profile Page</div>
@@ -17,10 +16,10 @@
 			<img class="profile" src="http://i.groupme.com/1372x1576.png.99f05898662744bfbb59a16f871d2e84.large">
 		</div>
 		<div>
-			<a href="https://www.linkedin.com/pub/shreyans-patel/36/a25/298" target="blank"><img class="social" src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png"></a>
-			<a href="https://github.com/Shreyp" target="blank"><img class="social" src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png"></a>
-			<a href="https://www.facebook.com/shreyans.patel.7" target="blank"><img class="social" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/F_icon.svg/2000px-F_icon.svg.png" "></a>
-			<a href="https://plus.google.com/108924129270029866296/posts" target="blank"><img class="social" src="http://icons.iconarchive.com/icons/marcus-roberto/google-play/256/Google-plus-icon.png"></a>
+			<a href="https://www.linkedin.com/pub/shreyans-patel/36/a25/298" target="blank"><img class="social" src="images/linkedin.png"></a>
+			<a href="https://github.com/Shreyp" target="blank"><img class="social" src="images/github.png"></a>
+			<a href="https://www.facebook.com/shreyans.patel.7" target="blank"><img class="social" src="images/facebook.png"></a>
+			<a href="https://plus.google.com/108924129270029866296/posts" target="blank"><img class="social" src="images/google_plus.png"></a>
 		</div>	
 	</div>
 	<hr>
