revamping profile page

--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Shreyans Patel|Web Developer</title>
+	<title>Projects</title>
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
@@ -15,9 +15,5 @@
 			</ul>
 		</nav>
 	</header>
-	<article>
-		<section>About Me</section>
-		<section><img src=""></section>
-	</article>
 </body>
 </html>
