added profile picture
clear

--- a/home.html
+++ b/home.html
@@ -16,8 +16,8 @@
 		</nav>
 	</header>
 	<article>
-		<section>About Me</section>
-		<section><img src=""></section>
+		<section class="me">About Me</section>
+		<section><img class="profile" src="images/profile_img.large"></section>
 	</article>
 </body>
 </html>
