--- a/home.html
+++ b/home.html
@@ -1,72 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Profile Page</title>
-	<link rel="stylesheet" type="text/css" href="styles\styles.css">
+	<title>Shreyans Patel|Web Developer</title>
+	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
-	<div class="navigation">
-		<a href="home.html">Home</a>
-		<a href="Blog_Post.html">Blog</a>
-		<a href="#contact">Contact Me</a>
-	</div>
-	<div class="header">
-		<div class="name">Shreyans' Profile Page</div>
-		<div>
-			<img class="profile" src="http://i.groupme.com/1372x1576.png.99f05898662744bfbb59a16f871d2e84.large">
-		</div>
-		<div>
-			<a href="https://www.linkedin.com/pub/shreyans-patel/36/a25/298" target="blank"><img class="social" src="images/linkedin.png"></a>
-			<a href="https://github.com/Shreyp" target="blank"><img class="social" src="images/github.png"></a>
-			<a href="https://www.facebook.com/shreyans.patel.7" target="blank"><img class="social" src="images/facebook.png"></a>
-			<a href="https://plus.google.com/108924129270029866296/posts" target="blank"><img class="social" src="images/google_plus.png"></a>
-		</div>	
-	</div>
-	<hr>
-	<br />
-	<h2>About Me</h2>
-		<article>Hi, my name is Shreyans Patel.  I graduated from Rutgers University in 2011 with a bachelors of science in Economics and Psychology.</article>
-	<br />
-	<h2>Career Objective</h2>
-		<article>Become a kickass web developer.</article>
-	<br />
-	<h2>Known Skills/Technologies</h2>
-		<ul>
-			<li>html</li>
-			<li>CSS</li>
-		</ul>
-	<br />
-	<h2>My Hobbies</h2>
-		<ul>
-			<li>Playing Golf</li>
-			<li>Playing Videogames (Destiny)</li>
-			<li>Drinking</li>
-			<li>Eating</li>
-		</ul>
-	<br />
-	<h2>Projects I've Worked On/Wish to Work on</h2>
-		<ul>
-			<li>My Profile Page</li>
-		</ul>
-	<br />
-<div id="contact">
-	<h2>Contact Me</h2>
-	<p>Phone: 732-710-1562</p>
-	<p>Email: <a href="shreyans89@gmail.com">shreyans89@gmail.com</a></p>
-	<br />
-		<form action="action_page.php" method="post">
-			<fieldset>
-				<legend>Let's Keep in Touch</legend>
-				Name:<br />
-				<input type="text" id="Name" name="Name"><br />
-				Email:<br />
-				<input type="text" id="Email" name="Email"><br />
-				Message:<br />
-				<textarea id="Message" name="Message"></textarea><br />
-			<input type="submit" value="submit">
-		</fieldset>
-	</form>
-</div>
-<br />
+	<header class="top">
+		<p class="name">Shreyans Patel<br /><span class="dev"> Web Devloper</span></p>
+		<nav>
+			<ul>
+				<li><a href="home.html"> Home</a> //</li>
+				<li><a href="projects.html"> Projects</a> //</li>
+				<li><a href="blog.html"> Blog</a></li>
+			</ul>
+		</nav>
+	</header>
+	<article>
+		<section class="me">About Me</section>
+	</article>
 </body>
 </html>
