--- a/home.html
+++ b/home.html
@@ -9,8 +9,7 @@
 		<p class="name">Shreyans Patel<br /><span class="dev"> Web Devloper</span></p>
 		<nav>
 			<ul>
-				<li><a href="home.html"> Home</a> //</li>
-				<li><a href="projects.html"> Projects</a> //</li>
+				<li class:"active"><a href="home.html"> Home</a> //</li>
 				<li><a href="blog.html"> Blog</a></li>
 			</ul>
 		</nav>
