--- a/blog.html
+++ b/blog.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Blog</title>
-	<link rel="stylesheet" type="text/css" href="styles\styles.css">
+	<title>Shreyans Patel|Web Developer</title>
+	<link rel="stylesheet" type="text/css" href="styles/styles.css">
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
 </head>
 <body>
-	<header class="top">
-		<p class="name">Shreyans Patel<br /><span class="dev"> Web Devloper</span></p>
-		<nav>
-			<ul>
-				<li><a href="home.html"> Home</a> //</li>
-				<li><a href="blog.html"> Blog</a></li>
-			</ul>
-		</nav>
-	</header>
-	<h1>Blog</h1>
-		<h3>Sunday November 1, 2015</h3>
-			<article>A quarantine zone for a plague that kills turians. Why don’t we ever go anywhere nice? Just keeping my skills sharp. A little target practice. I tried asking Liara questions about the asari mating process. She said I don't safeguard the secrets of the crew well enough to entrust me with such... private information. The asari word she used translates as 'blabbermouth.' The more good you do, the less they to want to admit that something needed doing. Huh. Nobody died.<br />Some other time. About to test new bio-weapon. Not on us, of course. Didn’t think I had to specify, but Joker got nervous. Sorry, Shepard, but they’re listening to every word we say... I prefer my salarian liver served raw! Hey, Commander, we got Garrus back! That’s great, because he was totally my favorite. With that pole up his ass. Do you have to make it sound so... tawdry? Ha! I knew there was a reason I liked you. <br />Mating between species? A pointless exercise. I’ve had enough of your disingenuous assertions. They said it couldn't be done! Then again, that's been said about a lot of things you do. If this is the individuality you value, we question your judgment. Go now to the sea.</article>
+<nav class="navbar navbar-default">
+  <div class="container-fluid" id="navbar">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="home.html">Shreyans Patel</a>
+    </div>
+    <ul class="nav navbar-nav">
+    <li><a href="home.html">Home</a></li>
+    <li class="active"><a href="blog.html">Blog</a></li>
+    </ul>
+  </div><!-- /.container-fluid -->
+</nav>
 </body>
 </html>
