--- a/home.html
+++ b/home.html
@@ -9,17 +9,16 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
 </head>
 <body>
-	<header class="top">
-		<p class="name">Shreyans Patel<br /><span class="dev"> Web Devloper</span></p>
-		<nav>
-			<ul>
-				<li class:"active"><a href="home.html"> Home</a> //</li>
-				<li><a href="blog.html"> Blog</a></li>
-			</ul>
-		</nav>
-	</header>
-	<article>
-		<section class="me">About Me</section>
-	</article>
+<nav class="navbar navbar-default">
+  <div class="container-fluid" id="navbar">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="home.html">Shreyans Patel</a>
+    </div>
+    <ul class="nav navbar-nav">
+    <li class="active"><a href="home.html">Home</a></li>
+    <li><a href="blog.html">Blog</a></li>
+    </ul>
+  </div><!-- /.container-fluid -->
+</nav>
 </body>
 </html>
