--- a/home.html
+++ b/home.html
@@ -2,23 +2,41 @@
 <html>
 <head>
 	<title>Shreyans Patel|Web Developer</title>
-	<link rel="stylesheet" type="text/css" href="styles/styles.css">
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/superhero/bootstrap.min.css" rel="stylesheet" integrity="sha256-o0IkLyCCWGBI+ryg6bL44/f8s4cb7+5bncR4LvU57a8= sha512-jptu6vg45XTY9uPX3vD5nHN4vASCN2hHl+fhmgkdd/px/bFHKMXmDXhkNmTiCpKqH6sliEPFakl2KZNav2Zo1Q==" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
-<nav class="navbar navbar-default">
-  <div class="container-fluid" id="navbar">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="home.html">Shreyans Patel</a>
+<!--Navbar Start-->
+  <nav class="navbar navbar-default navbar-custom">
+    <div class="container-fluid" id="navbar">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="home.html">Shreyans Patel</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="home.html">Home</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="repos.html">My Repos</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="https://www.facebook.com/shreyans.patel.7" target="blank"><i class="fa fa-facebook-square fa-2x"></i></a></li>
+        <li><a href="https://github.com/Shreyp" target="blank"><i class="fa fa-github-square fa-2x"></i></a></li>
+        <li><a href="https://plus.google.com/108924129270029866296/posts" target="blank"><i class="fa fa-google-plus-square fa-2x"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/shreyansap" target="blank"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+      </ul>
+    </div><!-- /.container-fluid -->
+  </nav>
+<!--Navbar End-->
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12" id="header-home">
+        <h1 class="header">Shreyans Patel</h1>
+        <h2>Front-end Developer</h2>
+      </div>
     </div>
-    <ul class="nav navbar-nav">
-    <li class="active"><a href="home.html">Home</a></li>
-    <li><a href="blog.html">Blog</a></li>
-    </ul>
-  </div><!-- /.container-fluid -->
-</nav>
+    <div class="row">
+      <div class="col-md-12"></div>
+    </div>
+  </div>
 </body>
 </html>
