--- a/repos.html
+++ b/repos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Shreyans Patel|Web Developer</title>
+  <title>Shreyans Patel|Web Developer</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/superhero/bootstrap.min.css" rel="stylesheet" integrity="sha256-o0IkLyCCWGBI+ryg6bL44/f8s4cb7+5bncR4LvU57a8= sha512-jptu6vg45XTY9uPX3vD5nHN4vASCN2hHl+fhmgkdd/px/bFHKMXmDXhkNmTiCpKqH6sliEPFakl2KZNav2Zo1Q==" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
@@ -15,8 +15,8 @@
       </div>
       <ul class="nav navbar-nav">
         <li><a href="home.html">Home</a></li>
-        <li class="active"><a href="blog.html">Blog</a></li>
-        <li><a href="repos.html">My Repos</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li class="active"><a href="repos.html">My Repos</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="https://www.facebook.com/shreyans.patel.7" target="blank"><i class="fa fa-facebook-square fa-2x"></i></a></li>
@@ -30,10 +30,28 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12" id="header-home">
-        <h1 class="header">My Blog</div>
+        <h1 class="header">My Repos</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-2">
+        <div class="list-group"></div>
+      </div>
+      <div class="col-md-10">
+        <table class="table">
+          <thead>
+            <th>sha</th>
+            <th>Author</th>
+            <th>Message</th>
+            <th>Date</th>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
     </div>
   </div>
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script type="text/javascript" src="js/commits.js"></script>
   <script type="text/javascript" src="js/repos.js"></script>
 </body>
 </html>
